fix minor things

--- a/project/aux/preparation.ipynb
+++ b/project/aux/preparation.ipynb
@@ -21,7 +21,7 @@
    },
    "outputs": [],
    "source": [
-    "from nltk.tokenize import word_tokenize"
+    "import nltk.tokenize"
    ]
   },
   {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -74,29 +74,35 @@
     "    \n",
     "    \n",
     "class RelationInfo:\n",
-    "    def __init__(self, relation, verbose=False):\n",
-    "        assert relation is not None\n",
-    "        if relation.left.type == \"N\":\n",
-    "            print_if_verbose(\"Nucleus is on the left.\", verbose)\n",
-    "            self.nucleus_info = RelationPartInfo(\n",
-    "                \"right\", relation.left_child, relation.left, \"Nucleus\"\n",
-    "            )\n",
-    "            self.satellite_info = RelationPartInfo(\n",
-    "                \"left\", relation.right_child, relation.right, \"Satellite\"\n",
-    "            )\n",
-    "        else:\n",
-    "            print_if_verbose(\"Nucleus is on the right.\", verbose)\n",
-    "            self.nucleus_info = RelationPartInfo(\n",
-    "                \"left\", relation.right_child, relation.right, \"Nucleus\"\n",
-    "            )\n",
-    "            self.satellite_info = RelationPartInfo(\n",
-    "                \"right\", relation.left_child, relation.left, \"Satellite\"\n",
-    "            )"
+    "    def __init__(self, nucleus_info, satellite_info):\n",
+    "        self.nucleus_info = nucleus_info\n",
+    "        self.satellite_info = satellite_info\n",
+    "        \n",
+    "        \n",
+    "def get_info(relation, verbose=False):\n",
+    "    assert relation is not None\n",
+    "    if relation.left.type == \"N\":\n",
+    "        print_if_verbose(\"Nucleus is on the left.\", verbose)\n",
+    "        nucleus_info = RelationPartInfo(\n",
+    "            \"right\", relation.left_child, relation.left, \"Nucleus\"\n",
+    "        )\n",
+    "        satellite_info = RelationPartInfo(\n",
+    "            \"left\", relation.right_child, relation.right, \"Satellite\"\n",
+    "        )\n",
+    "    else:\n",
+    "        print_if_verbose(\"Nucleus is on the right.\", verbose)\n",
+    "        nucleus_info = RelationPartInfo(\n",
+    "            \"left\", relation.right_child, relation.right, \"Nucleus\"\n",
+    "        )\n",
+    "        satellite_info = RelationPartInfo(\n",
+    "            \"right\", relation.left_child, relation.left, \"Satellite\"\n",
+    "        )\n",
+    "    return RelationInfo(nucleus_info, satellite_info)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
@@ -168,7 +174,20 @@
     "                            \"Satellite's right subsegment starts with a wh-word or 'how'.\",\n",
     "                            verbose\n",
     "                        )\n",
-    "                        case = TextExtractor.Case.NO_STOP_IN_N_WH_WORD\n",
+    "                        if (\n",
+    "                            relation_part_info.relation.right_child is not None\n",
+    "                                and (\n",
+    "                                        relation_part_info.relation.right_child.type \n",
+    "                                            == \"Background\"\n",
+    "                                )\n",
+    "                        ):\n",
+    "                            print_if_verbose(\n",
+    "                                \"Satellite's right subrelation is 'Background'.\",\n",
+    "                                verbose\n",
+    "                            )\n",
+    "                            case = TextExtractor.Case.NO_STOP_IN_N_WH_WORD\n",
+    "                        else:\n",
+    "                            case = TextExtractor.Case.NO_STOP_IN_N_OTHER\n",
     "                    else:\n",
     "                        left_subsegment = relation_part_info.relation.left\n",
     "                        if belong_to_one_vp(\n",
@@ -187,26 +206,28 @@
     "\n",
     "        print_if_verbose(TextExtractor.messages[case].format(relation_part_info.name), verbose)\n",
     "        if case in {\n",
-    "    #             TextExtractor.Case.NO_STOP_IN_N_WH_WORD,\n",
+    "            TextExtractor.Case.NO_STOP_IN_N_WH_WORD,\n",
     "            TextExtractor.Case.NO_STOP_IN_N_AND  \n",
     "        }:\n",
     "            print_if_verbose(\"Will use only sub-nucleus.\", verbose)\n",
     "            extracted_text = text[\n",
     "                left_subsegment.start:left_subsegment.end\n",
     "            ]\n",
+    "            used_subnucleus = True\n",
     "        else:\n",
     "            print_if_verbose(\"Will use the whole segment.\", verbose)\n",
     "            satellite_segment = relation_part_info.segment\n",
     "            extracted_text = text[\n",
     "                relation_part_info.segment.start:relation_part_info.segment.end\n",
     "            ]\n",
+    "            used_subnucleus = False\n",
     "\n",
-    "        return TextExtractor.Result(case, extracted_text)"
+    "        return TextExtractor.Result(case, extracted_text), used_subnucleus"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,23 +280,26 @@
     "    def get_depth(relation):\n",
     "        if relation:\n",
     "            return 1 + max(\n",
-    "                get_depth(relation.left_child), \n",
-    "                get_depth(relation.right_child)\n",
+    "                Preprocessor.get_depth(relation.left_child), \n",
+    "                Preprocessor.get_depth(relation.right_child)\n",
     "            )\n",
     "        else:\n",
     "            return 0\n",
-    "        \n",
-    "    def ends_with_a_punctuation_mark(text):\n",
-    "        return text[-1:] in {\".\", \"!\", \"?\", \";\"}\n",
     "\n",
-    "    def is_ok(text, segment_type, verbose):\n",
+    "    def ends_with_a_punctuation_mark(text, segment_type, verbose):\n",
+    "        if text[-1:] in {\".\", \"!\", \"?\", \";\"}:\n",
+    "            return True\n",
+    "        else:\n",
+    "            print_if_verbose(\n",
+    "                f\"{segment_type} doesn't end with a punctuation mark.\", verbose\n",
+    "            )\n",
+    "            return False\n",
+    "\n",
+    "    def is_empty(text, segment_type, verbose):\n",
     "        if len(text) == 0:\n",
     "            print_if_verbose(f\"{segment_type} is empty.\", verbose)\n",
-    "            return False\n",
-    "        elif not Preprocessor.ends_with_a_punctuation_mark(text):\n",
-    "            print_if_verbose(f\"{segment_type} doesn't end with a punctuation mark.\", verbose)\n",
-    "            return False\n",
-    "        return True\n",
+    "            return True\n",
+    "        return False\n",
     "    \n",
     "    def handle_nucleus(text, nucleus_info, verbose):\n",
     "        if Preprocessor.get_depth(nucleus_info.relation) > Preprocessor.MAX_DEPTH:\n",
@@ -292,21 +316,28 @@
     "                nucleus_info.direction,\n",
     "                verbose\n",
     "            )\n",
+    "            cleaned_n_text = clean(n_text)\n",
     "        else:\n",
     "            print_if_verbose(\n",
     "                f\"Nucleus's depth <= {Preprocessor.MAX_DEPTH}.\",\n",
     "                verbose\n",
     "            )\n",
     "            used_search = False\n",
-    "            n_text_rextraction_result = TextExtractor.extract_text(\n",
+    "            n_text_rextraction_result, used_subnucleus = TextExtractor.extract_text(\n",
     "                text, nucleus_info, verbose\n",
     "            )\n",
     "            extraction_case = n_text_rextraction_result.case\n",
     "            n_text = n_text_rextraction_result.extracted_text\n",
+    "            cleaned_n_text = clean(n_text)\n",
+    "            if (\n",
+    "                not used_subnucleus \n",
+    "                    and not Preprocessor.ends_with_a_punctuation_mark(\n",
+    "                                cleaned_n_text, \"Nucleus\", verbose\n",
+    "                            )\n",
+    "            ):\n",
+    "                return None\n",
     "        \n",
-    "        cleaned_n_text = clean(n_text)       \n",
-    "        \n",
-    "        if not Preprocessor.is_ok(cleaned_n_text, \"Nucleus\", verbose):\n",
+    "        if Preprocessor.is_empty(cleaned_n_text, \"Nucleus\", verbose):\n",
     "            return None\n",
     "        else:\n",
     "            return PreparationResult(\n",
@@ -314,7 +345,7 @@
     "                extraction_case=extraction_case,\n",
     "                prepared_text=cleaned_n_text\n",
     "            )\n",
-    "        \n",
+    "\n",
     "    def handle_satellite(text, satellite_info, nucleus_direction, verbose):\n",
     "        if satellite_info.relation is None:\n",
     "            print_if_verbose(\n",
@@ -354,21 +385,28 @@
     "                    satellite_info.direction,\n",
     "                    verbose\n",
     "                )\n",
+    "                cleaned_s_text = clean(s_text)       \n",
     "            else:\n",
     "                print_if_verbose(\n",
     "                    f\"The depth of the satellite's nucleus <= {Preprocessor.MAX_DEPTH}.\",\n",
     "                    verbose\n",
     "                )\n",
     "                used_search = False\n",
-    "                s_text_rextraction_result = TextExtractor.extract_text(\n",
+    "                s_text_rextraction_result, used_subnucleus = TextExtractor.extract_text(\n",
     "                    text, satellite_info, verbose\n",
     "                )\n",
     "                extraction_case = s_text_rextraction_result.case\n",
     "                s_text = s_text_rextraction_result.extracted_text\n",
+    "                cleaned_s_text = clean(s_text)       \n",
+    "                if (\n",
+    "                    not used_subnucleus\n",
+    "                        and not Preprocessor.ends_with_a_punctuation_mark(\n",
+    "                                    cleaned_s_text, \"Satellite\", verbose\n",
+    "                                )\n",
+    "                ):\n",
+    "                    return None\n",
     "            \n",
-    "            cleaned_s_text = clean(s_text)       \n",
-    "\n",
-    "            if not Preprocessor.is_ok(cleaned_s_text, \"Satellite\", verbose):\n",
+    "            if Preprocessor.is_empty(cleaned_s_text, \"Satellite\", verbose):\n",
     "                return None\n",
     "            else:\n",
     "                return Preprocessor.SatelliteHandlingResult(\n",
@@ -383,7 +421,7 @@
     "                )\n",
     "        \n",
     "    def prepare_extended_info(text, relation, verbose=False):\n",
-    "        rel_info = RelationInfo(relation, verbose)\n",
+    "        rel_info = get_info(relation, verbose)\n",
     "\n",
     "        nucleus_preparation_result = Preprocessor.handle_nucleus(\n",
     "            text, rel_info.nucleus_info, verbose\n",
@@ -409,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -544,42 +582,57 @@
       "24   VP      2   14      2\n",
       "Satellite's (left) nucleus doesn't contain '.', '!', '?', or ';'. Satellite's right subsegment starts 'and' and its verb belongs to the same subject.\n",
       "Will use only sub-nucleus.\n",
-      "Satellite doesn't end with a punctuation mark.\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 's_text_extraction_result'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-43-6162418d202e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m )\n\u001b[1;32m     17\u001b[0m assert (\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0mextended_rel_info\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ms_text_extraction_result\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcase\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m         \u001b[0;34m==\u001b[0m \u001b[0mTextExtractor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNO_STOP_IN_N_AND\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m )\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 's_text_extraction_result'"
+      "Nucleus is on the left.\n",
+      "Nucleus's depth <= 3.\n",
+      "Nucleus's left subsegment is not nucleus.\n",
+      "Will use the whole segment.\n",
+      "Satellite's nucleus is on the right.\n",
+      "Nuclei proximity is NucleusProximity.FAR\n",
+      "The depth of the satellite's nucleus <= 3.\n",
+      "Satellite's left subsegment is not nucleus.\n",
+      "Will use the whole segment.\n"
      ]
     }
    ],
    "source": [
-    "%run relation_extraction.ipynb\n",
-    "%run nlp.ipynb\n",
+    "# %run relation_extraction.ipynb\n",
+    "# %run nlp.ipynb\n",
     "\n",
-    "text, relations = read_relations(\"\"\"\n",
-    "    (Explanation[N][S]\n",
-    "            (Elaboration[N][S]\n",
-    "              _!I then came to China , a country!_ \n",
-    "              _!I had always wanted to visit . <s>!_) \n",
-    "            (Joint[N][N]\n",
-    "              _!I saw Beijing , of course ,!_\n",
-    "              _!and climbed up the Great Wall . <s>!_))\n",
-    "    \"\"\"\n",
-    ")\n",
-    "extended_rel_info = Preprocessor.prepare_extended_info(\n",
-    "    text, relations[\"Explanation\"][0], True\n",
-    ")\n",
-    "assert (\n",
-    "    extended_rel_info.s_text_extraction_result.case\n",
-    "        == TextExtractor.Case.NO_STOP_IN_N_AND\n",
-    ")"
+    "# text, relations = read_relations(\"\"\"\n",
+    "#     (Explanation[N][S]\n",
+    "#             (Elaboration[N][S]\n",
+    "#               _!I then came to China , a country!_ \n",
+    "#               _!I had always wanted to visit . <s>!_) \n",
+    "#             (Joint[N][N]\n",
+    "#               _!I saw Beijing , of course ,!_\n",
+    "#               _!and climbed up the Great Wall . <s>!_))\n",
+    "#     \"\"\"\n",
+    "# )\n",
+    "# extended_rel_info = Preprocessor.prepare_extended_info(\n",
+    "#     text, relations[\"Explanation\"][0], True\n",
+    "# )\n",
+    "# assert (\n",
+    "#     extended_rel_info.satellite_preparation_result.extraction_case\n",
+    "#         == TextExtractor.Case.NO_STOP_IN_N_AND\n",
+    "# )\n",
+    "\n",
+    "# text, relations = read_relations(\"\"\"\n",
+    "# (Explanation[N][S]\n",
+    "#       (Attribution[S][N] _!They knew!_ _!it would be easy . <s>!_)\n",
+    "#       (Attribution[S][N]\n",
+    "#         _!The professor had said!_\n",
+    "#         (Elaboration[N][S]\n",
+    "#           _!that they could bring any book or note!_\n",
+    "#           _!they wanted . <s>!_)))\n",
+    "#     \"\"\"\n",
+    "# )\n",
+    "# extended_rel_info = Preprocessor.prepare_extended_info(\n",
+    "#     text, relations[\"Explanation\"][0], True\n",
+    "# )\n",
+    "# assert (\n",
+    "#     extended_rel_info.satellite_preparation_result.extraction_case\n",
+    "#         == TextExtractor.Case.LEFT_SUBSEGMENT_NOT_N\n",
+    "# )"
    ]
   },
   {
@@ -589,23 +642,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "text, relations = read_relations(\"\"\"\n",
-    "(Explanation[N][S]\n",
-    "      (Attribution[S][N] _!They knew!_ _!it would be easy . <s>!_)\n",
-    "      (Attribution[S][N]\n",
-    "        _!The professor had said!_\n",
-    "        (Elaboration[N][S]\n",
-    "          _!that they could bring any book or note!_\n",
-    "          _!they wanted . <s>!_)))\n",
-    "    \"\"\"\n",
-    ")\n",
-    "extended_rel_info = prepare_extended_info(text, relations[\"Explanation\"][0], True)\n",
-    "assert (\n",
-    "    extended_rel_info.s_text_extraction_result.case\n",
-    "        == TextExtractor.Case.LEFT_SUBSEGMENT_NOT_N\n",
-    ")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
