--- a/project/explanation_01.ipynb
+++ b/project/explanation_01.ipynb
@@ -36,7 +36,8 @@
       "importing Jupyter notebook from /Users/YK/mt/project/aux/utils.ipynb\n",
       "importing Jupyter notebook from /Users/YK/mt/project/aux/nlp.ipynb\n",
       "importing Jupyter notebook from /Users/YK/mt/project/aux/relation_extraction.ipynb\n",
-      "importing Jupyter notebook from /Users/YK/mt/project/aux/defs.ipynb\n"
+      "importing Jupyter notebook from /Users/YK/mt/project/aux/defs.ipynb\n",
+      "importing Jupyter notebook from /Users/YK/mt/project/aux/preparation.ipynb\n"
      ]
     }
    ],
@@ -45,7 +46,8 @@
     "from aux import utils\n",
     "from aux import nlp\n",
     "from aux import relation_extraction\n",
-    "from aux import defs"
+    "from aux import defs\n",
+    "from aux import preparation"
    ]
   },
   {
@@ -110,9 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ItMakesParseResult = collections.namedtuple(\n",
@@ -149,9 +149,9 @@
     "    if safe_access(tokens, 0).lower() == \"it\":\n",
     "        make_pos = -1\n",
     "        \n",
-    "        if nlp.normalise_verb(safe_access(tokens, 1).lower()) == \"make\":\n",
+    "        if nlp.normalise_verb(safe_access(tokens, 1).lower()) == \"make\": #it makes ...\n",
     "            make_pos = 1\n",
-    "        elif nlp.normalise_verb(safe_access(tokens, 2).lower()) == \"make\":\n",
+    "        elif nlp.normalise_verb(safe_access(tokens, 2).lower()) == \"make\": #it is making ...\n",
     "            make_pos = 2\n",
     "        if make_pos < 0:\n",
     "            utils.print_if_verbose(\"Didn't find 'make'.\", verbose)\n",
@@ -161,13 +161,13 @@
     "            if first_verb_position is None:\n",
     "                utils.print_if_verbose(\n",
     "                    \"Didn't find the verb. Will look for an adjective.\", verbose\n",
-    "                )\n",
+    "                ) #It makes me sad.\n",
     "                first_adj_position = nlp.find_first_adjective(\" \".join(tokens[make_pos + 1:]))\n",
     "                if first_adj_position is None:\n",
     "                    utils.print_if_verbose(\"Didn't find an adjective either.\")\n",
     "                    return ItMakesParseResult(False, None, None, None)\n",
     "                else:\n",
-    "                    verb = \"be\"\n",
+    "                    verb = \"be\" #I am sad\n",
     "                    subject = \" \".join(\n",
     "                        tokens[make_pos + 1:(make_pos + 1 + first_adj_position)]\n",
     "                    )\n",
@@ -205,28 +205,44 @@
     "\n",
     "\n",
     "def test__parse_it_makes():\n",
-    "    parse_result = parse_it_makes(utils.tokenize(\"It's making him feel happy.\"))\n",
+    "    parse_result = parse_it_makes(\n",
+    "        utils.lowercase_and_tokenize(\"It's making him feel happy.\")\n",
+    "    )\n",
     "    check_parse_result(parse_result, \"he\", \"feels\")\n",
     "\n",
-    "    parse_result = parse_it_makes(utils.tokenize(\"It makes them feel happy.\"))\n",
+    "    parse_result = parse_it_makes(\n",
+    "        utils.lowercase_and_tokenize(\"It makes them feel happy.\")\n",
+    "    )\n",
     "    check_parse_result(parse_result, \"they\", \"feel\")\n",
     "\n",
-    "    parse_result = parse_it_makes(utils.tokenize(\"It makes the cats happy.\"))\n",
+    "    parse_result = parse_it_makes(\n",
+    "        utils.lowercase_and_tokenize(\"It makes the cats happy.\")\n",
+    "    )\n",
     "    check_parse_result(parse_result, \"the cats\", \"are\")\n",
     "\n",
-    "    parse_result = parse_it_makes(utils.tokenize(\"It makes the cat happy.\"))\n",
+    "    parse_result = parse_it_makes(\n",
+    "        utils.lowercase_and_tokenize(\"It makes the cat happy.\")\n",
+    "    )\n",
     "    check_parse_result(parse_result, \"the cat\", \"is\")\n",
     "\n",
-    "    parse_result = parse_it_makes(utils.tokenize(\"It has made the cat happy.\"))\n",
+    "    parse_result = parse_it_makes(\n",
+    "        utils.lowercase_and_tokenize(\"It has made the cat happy.\")\n",
+    "    )\n",
     "    check_parse_result(parse_result, \"the cat\", \"was\")\n",
     "\n",
-    "    parse_result = parse_it_makes(utils.tokenize(\"It has made the cats happy.\"))\n",
+    "    parse_result = parse_it_makes(\n",
+    "        utils.lowercase_and_tokenize(\"It has made the cats happy.\")\n",
+    "    )\n",
     "    check_parse_result(parse_result, \"the cat\", \"were\")\n",
     "\n",
-    "    parse_result = parse_it_makes(utils.tokenize(\"It has made the cats go home.\"))\n",
+    "    parse_result = parse_it_makes(\n",
+    "        utils.lowercase_and_tokenize(\"It has made the cats go home.\")\n",
+    "    )\n",
     "    check_parse_result(parse_result, \"the cats\", \"went\")\n",
     "    \n",
-    "    parse_result = parse_it_makes(utils.tokenize(\"It has made Mr. Smith go home.\"))\n",
+    "    parse_result = parse_it_makes(\n",
+    "        utils.lowercase_and_tokenize(\"It has made Mr. Smith go home.\")\n",
+    "    )\n",
     "    check_parse_result(parse_result, \"Mr. Smith\", \"went\")\n",
     "\n",
     "    \n",
@@ -235,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -273,23 +289,28 @@
     "    \n",
     "    def generate_statement(self, text, relation, verbose=False):\n",
     "        assert(relation is not None and relation.type == \"Explanation\")\n",
-    "        info = utils.prepare_extended_info(text, relation, verbose)\n",
+    "        info = preparation.Preprocessor.prepare_extended_info(\n",
+    "            text, relation, verbose\n",
+    "        ) # finding N,S and the nested ones\n",
     "        if info is None:\n",
     "            utils.print_if_verbose(\"Extended info preparation wasn't successful.\", verbose)\n",
     "            return None\n",
     "\n",
-    "        nucleus_tokens = utils.tokenize(\n",
-    "            info.nucleus_text\n",
+    "        nucleus_tokens = utils.lowercase_and_tokenize(\n",
+    "            info.nucleus_preparation_result.prepared_text\n",
     "        )\n",
     "        assert len(nucleus_tokens) > 0\n",
-    "        utils.print_if_verbose(f\"Satellite's nucleus text: \\n{info.sn_text}\", verbose)\n",
-    "        sn_tokens = utils.tokenize(\n",
-    "            info.sn_text\n",
+    "        utils.print_if_verbose(\n",
+    "            f\"Satellite's nucleus text: \\n{info.satellite_preparation_result.prepared_text}\", \n",
+    "            verbose\n",
+    "        )\n",
+    "        sn_tokens = utils.lowercase_and_tokenize(\n",
+    "            info.satellite_preparation_result.prepared_text\n",
     "        )\n",
     "        assert len(sn_tokens) > 0\n",
     "\n",
     "        reason = None\n",
-    "        augmented_sn_text = info.sn_text\n",
+    "        augmented_sn_text = info.satellite_preparation_result.prepared_text\n",
     "\n",
     "        if nucleus_tokens[0] == \"but\":\n",
     "            reason = RuleExplanation01.reasons[\"N_STARTS_WITH_BUT\"]\n",
@@ -310,9 +331,11 @@
     "        elif \"because\" in set(sn_tokens):\n",
     "            reason = RuleExplanation01.reasons[\"SN_CONTAINS_BECAUSE\"]\n",
     "        else:\n",
-    "            satellite_text = text[\n",
-    "                info.satellite_info.segment.start:info.satellite_info.segment.end\n",
-    "            ]\n",
+    "            satellite_text = preparation.clean(\n",
+    "                text[\n",
+    "                    info.satellite_info.segment.start:info.satellite_info.segment.end\n",
+    "                ]\n",
+    "            )\n",
     "            utils.print_if_verbose(f\"Satellite:\\n{satellite_text}\", verbose)\n",
     "            it_make_parse_result = parse_it_makes(word_tokenize(satellite_text))\n",
     "            utils.print_if_verbose(it_make_parse_result, verbose)\n",
@@ -321,7 +344,7 @@
     "                assert it_make_parse_result.subject is not None\n",
     "                assert it_make_parse_result.verb is not None\n",
     "                assert it_make_parse_result.rest is not None\n",
-    "                augmented_sn_text = utils.clean(\n",
+    "                augmented_sn_text = preparation.clean(\n",
     "                        \" \".join(\n",
     "                        [\n",
     "                            it_make_parse_result.subject, \n",
@@ -335,7 +358,7 @@
     "            utils.print_if_verbose(reason.explanation, verbose)\n",
     "            \n",
     "            prepared_nucleus_text = utils.remove_trailing_punctuation(\n",
-    "                utils.uppercase_first_letter(info.nucleus_text)\n",
+    "                utils.uppercase_first_letter(info.nucleus_preparation_result.prepared_text)\n",
     "            )\n",
     "            processed_sn_text = nlp.remove_leading_words(augmented_sn_text, verbose)\n",
     "            prepared_sn_text = utils.lowercase_first_letter(\n",
@@ -361,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -370,17 +393,34 @@
      "text": [
       "I 'm often there for three hours .  It makes me feel great to do something for the environment .  \n",
       "Nucleus is on the left.\n",
+      "Nucleus's depth <= 3.\n",
+      "Nucleus is flat.\n",
+      "Will use the whole segment.\n",
       "Satellite's nucleus is on the right.\n",
       "Nuclei proximity is NucleusProximity.FAR\n",
-      "Satellite doesn't have nested relations or its depth is too small.\n",
-      "Satellite doesn't contain a wh-word or 'how'.\n",
+      "The depth of the satellite's nucleus <= 3.\n",
+      "Satellite's left subsegment is not nucleus.\n",
+      "Will use the whole segment.\n",
       "Satellite's nucleus text: \n",
-      "me feel great to do something for the environment.\n",
+      "It makes me feel great to do something for the environment.\n",
       "Satellite:\n",
-      "It makes me feel great to do something for the environment .  \n",
+      "It makes me feel great to do something for the environment.\n",
       "ItMakesParseResult(success=True, subject='I', verb='feel', rest='great to do something for the environment .')\n",
       "Satellite's nucleus starts with 'It makes/made'.\n",
-      "Removing tokens before the first NP: \n",
+      "Removing tokens before the first NP:\n",
+      "-- syntactic parsing result\n",
+      " (ROOT\n",
+      "  (S\n",
+      "    (NP (PRP I))\n",
+      "    (VP (VBP feel)\n",
+      "      (ADJP (JJ great)\n",
+      "        (S\n",
+      "          (VP (TO to)\n",
+      "            (VP (VB do)\n",
+      "              (NP (NN something))\n",
+      "              (PP (IN for)\n",
+      "                (NP (DT the) (NN environment))))))))\n",
+      "    (. .)))\n",
       "I feel great to do something for the environment. \n",
       "---> \n",
       "I feel great to do something for the environment.\n",
@@ -413,10 +453,10 @@
     "        tree_text.replace(\"<s>\", \"\").replace(\"<P>\", \"\")\n",
     "    )\n",
     "\n",
-    "    expl = relations[\"Explanation\"][1]\n",
+    "    expl = relations[\"Explanation\"][1] # for generating just 1 statement\n",
     "    print(text[expl.left.start:expl.right.end])\n",
     "\n",
-    "    statement =rule.generate_statement(text, expl, verbose=True)\n",
+    "    statement = rule.generate_statement(text, expl, verbose=True)\n",
     "    print(\"\\nRESULT:\")\n",
     "    print(json.dumps(statement._asdict(), indent=2))"
    ]
